Introduction to seq to seq

--- a/Sequence to Sequence Learning with Neural Networks.ipynb
+++ b/Sequence to Sequence Learning with Neural Networks.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A sequence-to-sequence model is a model that takes a sequence of items (words, letters, features of an images…etc) and outputs another sequence of items. It is generelly two RNN (Recurrent Neural Network) : the first one is a encoder, and the second one a decoder. "
+    "The links essentially redirect to wikipedia and allow you to have additional information only if you are interested."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A sequence-to-sequence network is a model that takes a sequence of items (words, letters, features of an images…etc) and outputs another sequence of items hence its name: sequence to sequence. \n",
+    "\n",
+    "It is generelly two RNN (Recurrent Neural Network) : the first one is a encoder, and the second one a decoder. "
    ]
   },
   {
@@ -30,7 +39,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They have proven their effectiveness for many tasks: machine translation, text summarization, and image captioning."
+    "In this illustration, sequences are words.\n",
+    "\n",
+    "Sequence to sequence models have proven their effectiveness for many tasks in particular in machine translation, text summarization, image captioning and speech recognition. \n",
+    "\n",
+    "In machine translation, until 2015-2016, [Statistical Machine Translation](https://en.wikipedia.org/wiki/Statistical_machine_translation) was by far the most widely studied machine translation method, using statistical models. The introduction of [Neural Machine Translation](https://en.wikipedia.org/wiki/Neural_machine_translation) has significantly increased performance and for instance introduced in November 2016 its brand new neural machine translation new [Google Neural Machine Translation](https://en.wikipedia.org/wiki/Google_Neural_Machine_Translation) for Google Translate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "In 201"
    ]
   }
  ],
