--- a/Sequence to Sequence Learning with Neural Networks.ipynb
+++ b/Sequence to Sequence Learning with Neural Networks.ipynb
@@ -46,14 +46,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These models are explained in the two pioneering papers : [Sutskever et al., 2014](http://papers.nips.cc/paper/5346-sequence-to-sequence-learning-with-neural-networks.pdf) and [Cho et al., 2014](http://emnlp2014.org/papers/pdf/EMNLP2014179.pdf)."
+    "The model is explained in the pioneering paper : [Sutskever et al., 2014](http://papers.nips.cc/paper/5346-sequence-to-sequence-learning-with-neural-networks.pdf) (pretty new !)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sequence to sequence models have proven their effectiveness for many tasks in particular in machine translation, text summarization, image captioning, and speech recognition. \n",
+    "Sequence to sequence models have proven their effectiveness for many tasks and can be used in machine translation, artciles and books summarization, image captioning, speech recognition, waveforms and time-series forecasting, predicting stock market trends, handwriting generation and many more ! \n",
     "\n",
     "In the case of Neural Machine Translation, the input is a series of words, and the output is the translated series of words. Until 2014, [Statistical Machine Translation](https://en.wikipedia.org/wiki/Statistical_machine_translation) was by far the most widely studied machine translation method, using statistical models. The introduction of [Neural Machine Translation](https://en.wikipedia.org/wiki/Neural_machine_translation) has significantly increased performance and for instance Google introduced in November 2016 its brand new neural machine translation new [Google Neural Machine Translation](https://en.wikipedia.org/wiki/Google_Neural_Machine_Translation) for Google Translate."
    ]
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A seq2seq network is made of two neural networks. The first one is a **encoder**, which encodes a variable length input sequence to a fixed-length context vector (we will talk about his context vector later). The second one a **decoder** which receives this context vector and produces the output sequence."
+    "A seq2seq network is generally made of two neural networks. The first one is a **encoder**, which encodes a variable length input sequence to a fixed-length context vector (you can think of the context vector as being an abstract representation of the entire input sentence, we will talk more about his context vector later). The second one is a **decoder** which receives this context vector and learns to output the target (output) sequence by generating it one item at a time."
    ]
   },
   {
@@ -92,14 +92,30 @@
    "source": [
     "Note that the input is **3** circles, and the output is **4** triangles. \n",
     "\n",
-    "Indeed, for tranlation for example, the length of the input sequence in language A is not necessarily equal to the length of the output sequence in language B. \"Je suis étudiant\" becomes \"I am a student\". A seq2seq model is able to take a variable-length sequence as an input, and return a variable-length sequence as an output, using a fixed-sized model by encoding many inputs into one vector, and decoding from one vector into many outputs. The seq2seq model frees us from sequence length, which makes it ideal for translation between two languages and opens a whole new range of problems which can now be solved using such architecture."
+    "Indeed, for tranlation for example, the length of the input sequence in language A is not necessarily equal to the length of the output sequence in language B. \"Je suis étudiant\" becomes \"I am a student\". A seq2seq model is able to take a variable-length sequence as an input, and return a variable-length sequence as an output, using a fixed-sized model by encoding many inputs into one vector, and decoding from one vector into many outputs. The seq2seq model frees us from sequence length, which makes it ideal for translation between two languages and opens a whole new range of problems which can be solved using such architecture.\n",
+    "\n",
+    "How a sequence starts and ends ? Example with a german to english translator:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The encoder and decoder neural networks are generelly **RNNs (Recurrent Neural Networks)**."
+    "<img src=\"Images/sos-eos.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model takes as input a sequence starting with the SOS (Start Of Sequence) token and ending with the EOS (End Of Sequence) token. As long as the decoder doesn't predict the EOS token, the size of the output sequence can increase."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The encoder and decoder neural networks are (commonly) **RNNs (Recurrent Neural Networks)**."
    ]
   },
   {
@@ -113,7 +129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember, as we saw with Denis with the Time-series Forecasting notebook, recurrent neural networks depend on the previous state for the current state's computation. Instead of simply prediction $Y = f(x)$ as in feed-forward neural networks, recurrent networks do $Y_1 = f(x_1, f(x_0))$."
+    "Remember, as we saw with Denis with the Time-series Forecasting notebook, recurrent neural networks depend on the previous state for the current state's computation. \n",
+    "\n",
+    "Instead of simply prediction $Y = f(x)$ as in feed-forward neural networks, recurrent networks do $Y_1 = f(x_1, f(x_0))$."
    ]
   },
   {
@@ -162,7 +180,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**To recap**, here's a animation showing what we have for a seq2seq machine translation model for the moment."
+    "See how \"actions\" becomes \"stocks\" thanks to the memory of the RNN when we add the stock market context at the beginning of the sentence. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GRU and LSTM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple RNN can have difficulty handling long-term dependencies. Imagine a sequence problem that involves predicting a word in a sentence. Example : \"In France, I had a great time and I learnt some of the ______ language.\" The information of the word \"France\" can be found in hidden states but often is already too abstract. \n",
+    "\n",
+    "A seq2seq model could use more complex recurrent neural networks without this problem, such as **LSTM (Long Short-Term Memory)** or a **GRU (Gated Recurrent Unit)**. \n",
+    "\n",
+    "#### LSTM\n",
+    "As we saw with Denis with the Time-series Forecasting notebook, a LSTM is an more complex RNN explicitly designed to avoid the long-term dependency problem. Instead of just taking in a hidden state and returning a new hidden state per time-step (like a RNN : $h_t = \\text{RNN}(x_t, h_{t-1})$ ), a LSTM cell take in and return a separate cell state, $c_t$, per time-step ($(h_t, c_t) = \\text{LSTM}(x_t, (h_{t-1}, c_{t-1}))$.\n",
+    "\n",
+    "Example of a LSTM cell :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Images/lstm.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "i_t = \\sigma(W_{xi}x_t + W_{hi}h_{t-1} + W_{ci}c_{t-1}+b_i)\\\\\n",
+    "f_t = \\sigma(W_{xf}x_t + W_{hf}h_{t-1} + W_{cf}c_{t-1}+b_f)\\\\\n",
+    "c_t = f_tc_{t-1}+i_t\\tanh(W_{xc}x_t + W_{hc}h_{t-1} + b_c)\\\\\n",
+    "o_t = \\sigma(W_{xo}x_t + W_{ho}h_{t-1} + W_{co}c_{t-1}+b_o)\\\\\n",
+    "h_t = o_t\\tanh(c_t)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LSTM, using gates, have the ability to remove or add information to the cell state. Gates are a way to optionally let information through and they can be trained to keep information from long ago. It can keep information in the cell state, which might not be relevant at this time step, but might be relevant at a much later time step. Differents types of LSTM cells exist, if you want to learn more about LSTM, you can read [this blog post](https://colah.github.io/posts/2015-08-Understanding-LSTMs/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GRU\n",
+    "A GRU, Gated Recurrent Unit, is quite similar to LSTM, but has only two gates (a reset gate and an update gate) and an output state. GRU is the subject of one of AML's notebooks this year (topic number 31), if you want to learn more about it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recap\n",
+    "\n",
+    "Here's a animation showing what we have for a seq2seq machine translation model for the moment."
    ]
   },
   {
@@ -1340,10 +1423,7 @@
    "metadata": {},
    "source": [
     "**TO SAY**\n",
-    "\n",
-    "Since the task is sequence based, both the encoder and decoder tend to use some form of RNNs, LSTMs, GRUs, etc. \n",
-    "\n",
-    "Despite their flexibility and power, DNNs can only be appliedto problems whose inputs and targetscan be sensibly encoded with vectors of fixed dimensionality. It is a significant limitation, sincemany important problems are best expressed with sequences whose lengths are not known a-priori.For example, speech recognition and machine translation are sequential problems. Likewise, ques-tion answering can also be seen as mapping a sequence of wordsrepresenting the question to a1\n",
+    "Despite their flexibility and power, DNNs can only be applied to problems whose inputs and targets can be sensibly encoded with vectors of fixed dimensionality. It is a significant limitation, since many important problems are best expressed with sequences whose lengths are not known a-priori. For example, speech recognition and machine translation are sequential problems. Likewise, ques-tion answering can also be seen as mapping a sequence of wordsrepresenting the question to a1\n",
     "sequence of words representing the answer. It is therefore clear that a domain-independent methodthat learns to map sequences to sequences would be useful.Sequences pose a challenge for DNNs because they require that the dimensionality of the inputs andoutputs is known and fixed. "
    ]
   },
