--- a/Sequence to Sequence Learning with Neural Networks.ipynb
+++ b/Sequence to Sequence Learning with Neural Networks.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Throughout this notebook, we will create an **English to French translator**  using a sequence-sequence network."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. [What is a sequence to sequence network ?](#sec1)\n"
+    "1. [What is a sequence to sequence network ?](#sec1)\n",
+    "2. [How is it made ?](#sec2)\n",
+    "    1. [Principles](#sec2-A)\n",
+    "    2. [Why do we use RNNs ?](#sec2-B)\n",
+    "    3. [LSTM and GRU](#sec2-C)\n",
+    "    4. [Recap](#sec2-D)\n",
+    "    5. [Attention](#sec2-E)\n",
+    "3. [Code](#sec3)\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Sequence-to-Sequence</i> (abrv. Seq2Seq) models are deep learning models that take a sequence of items (sentences, medical signals, speech waveforms, time series, …) and output another sequence of items, hence its name \"sequence to sequence\"."
+    "<i>Sequence-to-Sequence</i> (abrv. Seq2Seq) models are deep learning models that take a sequence of items (sentences, medical signals, speech waveforms, time-series, …) and output another sequence of items, hence its name \"sequence to sequence\"."
    ]
   },
   {
@@ -53,9 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sequence to sequence models have proven their effectiveness for many tasks and can be used in machine translation, artciles and books summarization, image captioning, speech recognition, waveforms and time-series forecasting, predicting stock market trends, handwriting generation and many more ! \n",
+    "Sequence to sequence models have proven their effectiveness for many tasks and can be used in machine translation, articles and books summarization, image captioning, speech recognition, waveforms/time-series forecasting, predicting stock market trends, handwriting generation and many more ! \n",
     "\n",
-    "In the case of Neural Machine Translation, the input is a series of words, and the output is the translated series of words. Until 2014, [Statistical Machine Translation](https://en.wikipedia.org/wiki/Statistical_machine_translation) was by far the most widely studied machine translation method, using statistical models. The introduction of [Neural Machine Translation](https://en.wikipedia.org/wiki/Neural_machine_translation) has significantly increased performance and for instance Google introduced in November 2016 its brand new neural machine translation new [Google Neural Machine Translation](https://en.wikipedia.org/wiki/Google_Neural_Machine_Translation) for Google Translate."
+    "In the case of Neural Machine Translation, the input is a series of words, and the output is the translated series of words. Until 2014, [Statistical Machine Translation](https://en.wikipedia.org/wiki/Statistical_machine_translation) was by far the most widely used machine translation method, using statistical models. The introduction of [Neural Machine Translation](https://en.wikipedia.org/wiki/Neural_machine_translation) has significantly increased performance, and for instance Google introduced in November 2016 its new [Google Neural Machine Translation](https://en.wikipedia.org/wiki/Google_Neural_Machine_Translation) for Google Translate."
    ]
   },
   {
@@ -70,6 +70,13 @@
    "metadata": {},
    "source": [
     "# 2. <a id=\"sec2\"></a>How is it made ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A. <a id=\"sec2-A\"></a>Principles"
    ]
   },
   {
@@ -92,37 +99,16 @@
    "source": [
     "Note that the input is **3** circles, and the output is **4** triangles. \n",
     "\n",
-    "Indeed, for tranlation for example, the length of the input sequence in language A is not necessarily equal to the length of the output sequence in language B. \"Je suis étudiant\" becomes \"I am a student\". A seq2seq model is able to take a variable-length sequence as an input, and return a variable-length sequence as an output, using a fixed-sized model by encoding many inputs into one vector, and decoding from one vector into many outputs. The seq2seq model frees us from sequence length, which makes it ideal for translation between two languages and opens a whole new range of problems which can be solved using such architecture.\n",
+    "Indeed, for tranlation for example, the length of the input sequence in language A is not necessarily equal to the length of the output sequence in language B. \"Je suis étudiant\" (3 words) becomes \"I am a student\" (4 words). A seq2seq model is able to take a variable-length sequence as an input, and return a variable-length sequence as an output, using a fixed-sized model by encoding many inputs into one vector, and decoding from one vector into many outputs.\n",
     "\n",
-    "How a sequence starts and ends ? Example with a german to english translator:"
+    "In order to two that, the encoder and decoder neural networks are (commonly) **RNNs (Recurrent Neural Networks)**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Images/sos-eos.png\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The model takes as input a sequence starting with the SOS (Start Of Sequence) token and ending with the EOS (End Of Sequence) token. As long as the decoder doesn't predict the EOS token, the size of the output sequence can increase."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The encoder and decoder neural networks are (commonly) **RNNs (Recurrent Neural Networks)**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Why do we use RNNs ?"
+    "###  <a id=\"sec2-B\"></a>B. Why RNNs ?"
    ]
   },
   {
@@ -147,7 +133,7 @@
    "source": [
     "You can see that at every point in time, it takes as input its own previous state and the new input at that time step.\n",
     "<div class=\"alert alert-success\">\n",
-    "RNNs remember their previous state.\n",
+    "RNNs keep information about their previous state.\n",
     "</div>\n",
     "\n",
     "Each state is a function of the previous state, which is the function of its previous state, and so on. So, state n contain information from all past timesteps. And we need this to predict sequences. Indeed, elements in the sequences and the order of these elements have a strong relationship. For instance, a sentence contains words in a certain order and some of which have a strong influence on others. \n",
@@ -180,14 +166,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See how \"actions\" becomes \"stocks\" thanks to the memory of the RNN when we add the stock market context at the beginning of the sentence. "
+    "See how \"actions\" becomes \"stocks\" thanks to the memory of the RNN when we add the stock market context at the beginning of the sentence.\n",
+    "\n",
+    "The two RNNS working together frees us from sequence length which makes it ideal for translation between two languages and opens a whole new range of problems which can be solved using such architecture. How a sequence starts and ends ? Example with a german to english translator:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GRU and LSTM"
+    "<img src=\"Images/sos-eos.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model takes as input a sequence starting with the SOS (Start Of Sequence) token and ending with the EOS (End Of Sequence) token. As long as the decoder doesn't predict the EOS token, the size of the output sequence can increase."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <a id=\"sec2-C\"></a>C. LSTM and GRU"
    ]
   },
   {
@@ -198,7 +200,7 @@
     "\n",
     "A seq2seq model could use more complex recurrent neural networks without this problem, such as **LSTM (Long Short-Term Memory)** or a **GRU (Gated Recurrent Unit)**. \n",
     "\n",
-    "#### LSTM\n",
+    "##### - LSTM\n",
     "As we saw with Denis with the Time-series Forecasting notebook, a LSTM is an more complex RNN explicitly designed to avoid the long-term dependency problem. Instead of just taking in a hidden state and returning a new hidden state per time-step (like a RNN : $h_t = \\text{RNN}(x_t, h_{t-1})$ ), a LSTM cell take in and return a separate cell state, $c_t$, per time-step ($(h_t, c_t) = \\text{LSTM}(x_t, (h_{t-1}, c_{t-1}))$.\n",
     "\n",
     "Example of a LSTM cell :"
@@ -235,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### GRU\n",
+    "##### - GRU\n",
     "A GRU, Gated Recurrent Unit, is quite similar to LSTM, but has only two gates (a reset gate and an update gate) and an output state. GRU is the subject of one of AML's notebooks this year (topic number 31), if you want to learn more about it."
    ]
   },
@@ -243,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recap\n",
+    "###  <a id=\"sec2-D\"></a>D. Recap\n",
     "\n",
     "Here's a animation showing what we have for a seq2seq machine translation model for the moment."
    ]
@@ -267,16 +269,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Attention"
+    "###  <a id=\"sec2-E\"></a>E. Attention"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Attention allows the model to focus on the relevant parts of the input sequence at every stage of the output sequence allowing the context to be preserved from beginning to end. \n",
-    "\n",
-    "Instead of sending only one single hidden state vector to the decoder, we send a attention vector created from a linear combination of all previous hidden states."
+    "Attention allows the model to focus on the relevant parts of the input sequence at every stage of the output sequence allowing the context to be preserved from beginning to end. Instead of sending only one single hidden state vector to the decoder, we send a attention vector created from a linear combination of all previous hidden states."
    ]
   },
   {
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For an example of the translation of the sentence \"L'accord sur la zone économique européènne a été signé en août 1992\", we can visualize the attention matrix."
+    "For example, the translation of the sentence \"L'accord sur la zone économique européènne a été signé en août 1992\", we can visualize the attention matrix."
    ]
   },
   {
@@ -319,6 +319,13 @@
    "metadata": {},
    "source": [
     "You can see how the model, for unambiguous words like \"août\" or \"1992\", gives little importance to the other words in the sentence. You can also see that for \"zone économique européenne\", the model adapts to the reversed order between French and English."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**In a nutshell**, we have seen that a seq2seq model is composed of two RNNs working together, one as an encoder and one as a decoder. These RNNs can be simple, or more complex using LSTM or GRU cells. For the context vector passing from the encoder to the decoder, it consists of all the hidden states of the encoder. For each step, an attention vector is computed to give different importance to the different hidden states, so that the decoder can focus on the relevant parts for the time step under consideration."
    ]
   },
   {
